feat: update contact us link

--- a/src/pages/pro/guides/sheet/deployment/docker.en-US.mdx
+++ b/src/pages/pro/guides/sheet/deployment/docker.en-US.mdx
@@ -74,4 +74,4 @@ To ensure the 'Save As' feature works properly on your local network, update the
 # Update to: S3_ENDPOINT_PUBLIC=http://192.168.50.172:19000
 ```
 
-If you're still encountering issues, reach out to our community for further support.
+If you're still having issues, feel free to <a class="nx-text-primary-600 nx-underline nx-decoration-from-font [text-underline-position:from-font]" href="mailto:developer@univer.ai?subject=[Univer Pro]">contact us</a> for assistance.
