--- a/src/pages/pro/guides/sheet/deployment/docker.zh-CN.mdx
+++ b/src/pages/pro/guides/sheet/deployment/docker.zh-CN.mdx
@@ -1,8 +1,4 @@
----
-title: 部署到 Docker
-sidebar:
-  order: 21
----
+# 部署到 Docker
 
 我们提供了开箱即用的 Docker 部署方式，您可以通过 Docker Compose 快速部署 Univer Pro 服务。
 
@@ -80,4 +76,4 @@ Univer 服务默认端口如下：
 # 替换为 S3_ENDPOINT_PUBLIC=http://192.168.50.172:19000
 ```
 
-若仍然不能解决您的问题，请[联系社区](/guides/introduction#下一步)获取帮助。
+若仍然不能解决您的问题，请[联系我们](/pro/guides/sheet/introduction#-联系我们)获取帮助。
