--- a/src/pages/pro/guides/sheet/deployment/kubernetes.en-US.mdx
+++ b/src/pages/pro/guides/sheet/deployment/kubernetes.en-US.mdx
@@ -60,8 +60,8 @@ Here are the default services and ports provided by Univer Pro on Kubernetes: */
 {/* ## Persistent Storage Setup
 For applications that need persistent storage, follow Kubernetes' documentation to set up Persistent Volumes and Persistent Volume Claims. */}
 
-##Troubleshooting
+## Troubleshooting
 
 If your service isn't launching, verify the status of your Kubernetes Pods and consult the logs for clues.
 
-If you're still stuck, reach out to the community for further help.
+If you're still having issues, feel free to <a class="nx-text-primary-600 nx-underline nx-decoration-from-font [text-underline-position:from-font]" href="mailto:developer@univer.ai?subject=[Univer Pro]">contact us</a> for assistance.
