--- a/src/pages/pro/guides/sheet/deployment/kubernetes.zh-CN.mdx
+++ b/src/pages/pro/guides/sheet/deployment/kubernetes.zh-CN.mdx
@@ -1,8 +1,4 @@
----
-title: 部署到 Kubernetes
-sidebar:
-  order: 22
----
+# 部署到 Kubernetes
 
 Kubernetes 是一个开源的容器编排平台，用于自动化部署、扩展和管理容器化应用程序。在本教程中，我们将使用 Helm —— Kubernetes 的包管理工具，来简化部署过程。
 
@@ -71,5 +67,4 @@ Univer Pro 在 Kubernetes 上的默认服务和端口如下： */}
 服务未启动: 检查 Kubernetes 的 Pod 是否正常运行，查看日志以确定问题所在。
 
 
-若仍然不能解决您的问题， [联系社区](/guides/introduction#下一步) 获取帮助。
-
+若仍然不能解决您的问题， [联系社区](/pro/guides/sheet/introduction#-联系我们) 获取帮助。
