--- a/src/pages/guides/sheet/customization/model.en-US.mdx
+++ b/src/pages/guides/sheet/customization/model.en-US.mdx
@@ -4,7 +4,7 @@ Univer allows users to customize the models that plug-ins need to store on a doc
 
 ![image](./model/resource.jpg)
 
-Register a hook with the the `ResourceManagerService` service in package `@univer/core` to persist the data
+Register a hook with the the `ResourceManagerService` service in package `@univerjs/core` to persist the data
 
 ```typescript
 import { IResourceManagerService } from '@univerjs/core'
