--- a/src/pages/guides/sheet/customization/model.zh-CN.mdx
+++ b/src/pages/guides/sheet/customization/model.zh-CN.mdx
@@ -4,7 +4,7 @@ Univer 允许用户自定义插件需要存储在文档快照上的模型。
 
 ![image](./model/resource.jpg)
 
-在 `@univer/core` 中存在一个 `ResourceManagerService` 实例,你可以在自己新建的 plugin 中注册对应的 `hook` ,将数据绑定到 `snapshot` 上.
+在 `@univerjs/core` 中存在一个 `ResourceManagerService` 实例,你可以在自己新建的 plugin 中注册对应的 `hook` ,将数据绑定到 `snapshot` 上.
 
 ```typescript
 import { IResourceManagerService } from '@univerjs/core'
