docs: fix case code and remove write plugin

--- a/src/pages/guides/sheet/customization/formula.en-US.mdx
+++ b/src/pages/guides/sheet/customization/formula.en-US.mdx
@@ -216,7 +216,7 @@ If you are developing a Univer plugin, you can add custom formulas directly to t
 
 Our internal `UniverFormulaEnginePlugin` plugin provides a `function.service` specifically for registering formula descriptions and algorithms.
 
-First refer to [Custom Plugin](https://univer.ai/guides/customization/write-a-plugin/) to create a new plugin, and then you can start adding custom formulas.
+First, create a new plugin, and then you can start adding custom formulas.
 
 1. Create a new `custom-function.ts` file in the `common` file and write all the basic modules required for the formula.
 
