--- a/src/pages/guides/sheet/customization/formula.zh-CN.mdx
+++ b/src/pages/guides/sheet/customization/formula.zh-CN.mdx
@@ -217,7 +217,7 @@ import { Callout } from 'nextra/components'
 
 我们内部的 `UniverFormulaEnginePlugin` 插件提供了一个 `function.service`，专门用来注册公式的描述和算法。
 
-首先参考 [自定义插件](/zh-cn/guides/customization/write-a-plugin/)，新建一个插件，然后就可以开始添加自定义公式。
+先新建一个插件，然后就可以开始添加自定义公式。
 
 1. `common` 文件内新建 `custom-function.ts` 文件，将公式所需要的基础模块全部写好。
 
