--- a/src/pages/pro/guides/sheet/deployment/docker.zh-CN.mdx
+++ b/src/pages/pro/guides/sheet/deployment/docker.zh-CN.mdx
@@ -29,19 +29,20 @@ PostgreSQL + RabbitMQ
 cd helm-charts/docker-compose
 ```
 
-3. 启动后端服务。
+3. 配置许可文件 （可选），将您的 [Pro License](/pro/license) 文件放到 `docker-compose/configs` 目录下。
+
+4. 启动后端服务。
 
 ```bash
 bash run.sh
 ```
 
-4. 验证服务
+5. 验证服务
 
 验证文档服务是否启动成功。
 
 ```bash
-docker run --net=univer-prod --rm --name univer-collaboration-lite \
-  -p 3010:3010 univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/release/univer-collaboration-lite:latest
+docker run --net=univer-prod --rm --name univer-collaboration-lite -p 3010:3010 univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/release/univer-collaboration-lite:latest
 ```
 
 打开浏览器输入 http://localhost:3010 后会自动创建空白文档并跳转到新文档链接（不支持IE浏览器）。
