--- a/src/pages/guides/sheet/facade/general.en-US.mdx
+++ b/src/pages/guides/sheet/facade/general.en-US.mdx
@@ -242,7 +242,7 @@ Please refer to the following documentation to extend the Univer UI :
 
 Facade provides a convenient API `createSocket` for creating a Websocket, simply by passing in a URL. You can then listen to open, message, close, and error events, and actively send messages with the send method and actively close with the close method.
 
-```typescript title="main.ts"
+```typescript
 // Replace the URL with the address of your own Websocket service
 const ws = univerAPI.createSocket('ws://47.100.177.253:8449/ws')
 
