--- a/src/pages/pro/guides/sheet/facade/facade.zh-CN.mdx
+++ b/src/pages/pro/guides/sheet/facade/facade.zh-CN.mdx
@@ -26,7 +26,7 @@ pnpm add @univerjs-pro/facade
 
 @univerjs/facade 提供的 API 是对 `Univer` 实例的封装，因此你需要在创建了 `Univer` 实例之后，再用 `FUniver` 包裹这个实例：
 
-```typescript title="main.ts"
+```typescript
 import { FUniver } from "@univerjs-pro/facade";
 
 const univerAPI = FUniver.newAPI(univer);
