--- a/src/pages/pro/guides/sheet/facade/facade.en-US.mdx
+++ b/src/pages/pro/guides/sheet/facade/facade.en-US.mdx
@@ -26,7 +26,7 @@ pnpm add @univerjs-pro/facade
 
 The API from @univerjs/facade acts as a wrapper around the `Univer` instance. Therefore, you must first create a `Univer` instance, then use `FUniver` to wrap this instance:
 
-```typescript title="main.ts"
+```typescript
 import { FUniver } from "@univerjs-pro/facade";
 
 const univerAPI = FUniver.newAPI(univer);
