docs: update roadmap

--- a/src/pages/guides/sheet/roadmap.zh-CN.mdx
+++ b/src/pages/guides/sheet/roadmap.zh-CN.mdx
@@ -8,62 +8,62 @@ export const data = [
   {
     start: '2023/09',
     end: '2023/12',
-    name: '核心功能',
+    name: '✅ 核心功能',
   },
   {
     start: '2024/02',
     end: '2024/03',
-    name: '查找替换',
+    name: '✅ 查找替换',
+  },
+  {
+    start: '2024/02',
+    end: '2024/04',
+    name: '✅ 条件格式',
   },
   {
     start: '2024/01',
-    end: '2024/03',
-    name: '条件格式',
-  },
-  {
-    start: '2024/01',
-    end: '2024/03',
-    name: '数据验证',
+    end: '2024/04',
+    name: '✅ 数据验证',
   },
   {
     start: '2024/03',
     end: '2024/05',
-    name: '浮动图片',
+    name: '✅ 浮动图片',
   },
   {
     start: '2024/04',
     end: '2024/06',
-    name: '保护区域（子表和范围权限控制）',
+    name: '🏃 保护区域（子表和范围权限控制）',
+  },
+  {
+    start: '2024/03',
+    end: '2024/04',
+    name: '✅ 筛选',
   },
   {
     start: '2024/04',
-    end: '2024/06',
-    name: '筛选',
-  },
-  {
-    start: '2024/04',
-    end: '2024/06',
-    name: '批注',
+    end: '2024/05',
+    name: '🏃 批注',
   },
   {
     start: '2024/01',
     end: '2024/06',
-    name: '更多的公式',
+    name: '🏃 更多的公式',
   },
   {
-    start: '2024/04',
+    start: '2024/05',
     end: '2024/06',
-    name: '排序',
+    name: '🏃 排序',
   },
   {
     start: '2024/01',
     end: '2024/02',
-    name: '打印（Pro）'
+    name: '✅ 打印（Pro）'
   },
   {
     start: '2024/01',
     end: '2024/03',
-    name: '导入导出（Pro）'
+    name: '✅ 导入导出（Pro）'
   }
 ]
 
