--- a/src/pages/guides/sheet/roadmap.en-US.mdx
+++ b/src/pages/guides/sheet/roadmap.en-US.mdx
@@ -8,62 +8,62 @@ export const data = [
   {
     start: '2023/09',
     end: '2023/12',
-    name: 'Main Features',
+    name: '✅ Main Features',
   },
   {
     start: '2024/02',
     end: '2024/03',
-    name: 'Find & Replace',
+    name: '✅ Find & Replace',
+  },
+  {
+    start: '2024/02',
+    end: '2024/04',
+    name: '✅ Conditional Formatting',
   },
   {
     start: '2024/01',
-    end: '2024/03',
-    name: 'Conditional Formatting',
-  },
-  {
-    start: '2024/01',
-    end: '2024/03',
-    name: 'Data Validation',
+    end: '2024/04',
+    name: '✅ Data Validation',
   },
   {
     start: '2024/03',
     end: '2024/05',
-    name: 'Floating Images',
+    name: '✅ Floating Images',
   },
   {
     start: '2024/04',
     end: '2024/06',
-    name: 'Sheet Protection',
+    name: '🏃‍♀️ Sheet Permissions',
+  },
+  {
+    start: '2024/03',
+    end: '2024/04',
+    name: '✅ Filtering',
   },
   {
     start: '2024/04',
-    end: '2024/06',
-    name: 'Filtering',
-  },
-  {
-    start: '2024/04',
-    end: '2024/06',
-    name: 'Comments',
+    end: '2024/05',
+    name: '🏃‍♀️ Comments',
   },
   {
     start: '2024/01',
     end: '2024/06',
-    name: 'More Formulas',
+    name: '🏃‍♀️ More Formulas',
   },
   {
-    start: '2024/04',
+    start: '2024/05',
     end: '2024/06',
-    name: 'Sorting',
+    name: '🏃‍♀️ Sorting',
   },
   {
     start: '2024/01',
     end: '2024/02',
-    name: 'Printing (Pro)'
+    name: '✅ Printing (Pro)'
   },
   {
     start: '2024/01',
     end: '2024/03',
-    name: 'Import / Export (Pro)'
+    name: '✅ Import / Export (Pro)'
   }
 ]
 
