--- a/src/pages/pro/guides/sheet/deployment/docker.zh-CN.mdx
+++ b/src/pages/pro/guides/sheet/deployment/docker.zh-CN.mdx
@@ -16,8 +16,7 @@ PostgreSQL + RabbitMQ
 
 ## 部署
 
-
-系统环境：Linux、Mac、Windows/WSL。
+系统环境：Linux、Mac、Windows(WSL/Git Bash)
 
 1. 下载对应[版本](https://github.com/dream-num/helm-charts/releases)
 
@@ -68,13 +67,19 @@ Univer 服务默认端口如下：
 | univer-client | 3010 | frontend |
 
 
-## Docker compose 版的 S3 配置
+## 常见问题
 
-替换 .env 文件的 `S3_ENDPOINT_PUBLIC` 为本机 ip，才能使局域网内`另存为`功能正常。
+### windows 系统下启动失败？
 
-```bash
-# 如 S3_ENDPOINT_PUBLIC=http://univer-minio:9000
-# 替换为 S3_ENDPOINT_PUBLIC=http://192.168.50.172:19000
+运行脚本 `run.sh` 需要 `bash` 环境支持，请使用 Git Bash/MinGW 或 WSL 环境启动。
+
+### 表格另存为功能无法使用？
+
+编辑 `.env` 文件，将 `S3_ENDPOINT_PUBLIC` 配置为你的局域网 IP，才能使`另存为`功能正常。
+
+```diff
+- S3_ENDPOINT_PUBLIC=http://univer-minio:9000
++ S3_ENDPOINT_PUBLIC=http://你的局域网IP:19000
 ```
 
 若仍然不能解决您的问题，请[联系我们](/pro/guides/sheet/introduction#-联系我们)获取帮助。
