--- a/src/pages/guides/sheet/getting-started/installation.en-US.mdx
+++ b/src/pages/guides/sheet/getting-started/installation.en-US.mdx
@@ -79,6 +79,30 @@ import { UniverSheetsUIPlugin } from "@univerjs/sheets-ui";
 
 Then create a Univer instance and register these plugins:
 
+```typescript
+const univer = new Univer({
+  theme: defaultTheme,
+});
+
+univer.registerPlugin(UniverRenderEnginePlugin);
+univer.registerPlugin(UniverFormulaEnginePlugin);
+
+univer.registerPlugin(UniverUIPlugin, {
+  container: 'app',
+});
+
+univer.registerPlugin(UniverDocsPlugin, {
+  hasScroll: false,
+});
+univer.registerPlugin(UniverDocsUIPlugin);
+
+univer.registerPlugin(UniverSheetsPlugin);
+univer.registerPlugin(UniverSheetsUIPlugin);
+univer.registerPlugin(UniverSheetsFormulaPlugin);
+
+univer.createUnit(UniverInstanceType.UNIVER_SHEET, {});
+```
+
 export const code = `const univer = new Univer({
   theme: defaultTheme,
 });
@@ -88,8 +112,6 @@ univer.registerPlugin(UniverFormulaEnginePlugin);
 
 univer.registerPlugin(UniverUIPlugin, {
   container: 'app',
-  header: true,
-  footer: true,
 });
 
 univer.registerPlugin(UniverDocsPlugin, {
