fix: fix docs on i18n page

--- a/src/pages/guides/doc/getting-started/i18n.en-US.mdx
+++ b/src/pages/guides/doc/getting-started/i18n.en-US.mdx
@@ -18,7 +18,7 @@ import { enUS as UniverUIEnUS } from '@univerjs/ui';
 
 const univer = new Univer({
   theme: defaultTheme,
-  locale: LocaleType.ZH_CN,
+  locale: LocaleType.EN_US,
   locales: {
     [LocaleType.EN_US]: Tools.deepMerge(
       UniverDocsUIEnUS,
