--- a/src/pages/guides/sheet/getting-started/i18n.en-US.mdx
+++ b/src/pages/guides/sheet/getting-started/i18n.en-US.mdx
@@ -20,7 +20,7 @@ import { enUS as UniverUIEnUS } from '@univerjs/ui';
 
 const univer = new Univer({
   theme: defaultTheme,
-  locale: LocaleType.ZH_CN,
+  locale: LocaleType.EN_US,
   locales: {
     [LocaleType.EN_US]: Tools.deepMerge(
       UniverSheetsEnUS,
