docs: exchange api

--- a/src/pages/guides/sheet/customization/ui.en-US.mdx
+++ b/src/pages/guides/sheet/customization/ui.en-US.mdx
@@ -2,7 +2,7 @@ import { Callout } from 'nextra/components'
 
 # Extending UI
 
-## How to register a menu in a third-party plugin?
+## How To Register Custom Menu in Third-Party Plugin?
 
 If you are writing a Univer plugin, you can easily use `IMenuService` in the dependency injection system to register menu items.
 
