--- a/src/pages/guides/sheet/customization/ui.zh-CN.mdx
+++ b/src/pages/guides/sheet/customization/ui.zh-CN.mdx
@@ -2,7 +2,7 @@ import { Callout } from 'nextra/components'
 
 # 扩展 UI
 
-## 如何在第三方插件中注册菜单？
+## 如何在第三方插件中注册自定义菜单？
 
 如果你在编写一个 Univer 插件，可以很方便的使用依赖注入系统中的 `IMenuService` 来注册菜单项。
 
