--- a/src/pages/guides/sheet/customization/ui.en-US.mdx
+++ b/src/pages/guides/sheet/customization/ui.en-US.mdx
@@ -6,6 +6,12 @@ import { Callout } from 'nextra/components'
 
 If you are writing a Univer plugin, you can easily use `IMenuService` in the dependency injection system to register menu items.
 
+
+## 新增菜单项
+
+在 Univer 中，无论是顶部的工具栏菜单还是右键菜单，都可以通过编写插件来实现扩展。下面将介绍如何使用依赖注入系统中的 `IMenuService` 来注册菜单项。
+
+
 ### 1. Plugin Environment
 
 Make sure you understand the [plugin mechanism](/guides/sheet/architecture/univer) and have created a new plug-in via [@univerjs/create-cli](https://www.npmjs.com/package/@univerjs/create-cli).
@@ -15,33 +21,33 @@ First, construct a `controller` class to register menu item commands, menu item 
 // src/plugin/controllers/custom-menu.controller.ts
 @OnLifecycle(LifecycleStages.Steady, CustomMenuController)
 export class CustomMenuController extends Disposable {
-    constructor(
-        @Inject(Injector) private readonly _injector: Injector,
-        @ICommandService private readonly _commandService: ICommandService,
-        @IMenuService private readonly _menuService: IMenuService,
-        @Inject(ComponentManager) private readonly _componentManager: ComponentManager,
-    ) {
-        super();
+  constructor(
+    @Inject(Injector) private readonly _injector: Injector,
+    @ICommandService private readonly _commandService: ICommandService,
+    @IMenuService private readonly _menuService: IMenuService,
+    @Inject(ComponentManager) private readonly _componentManager: ComponentManager,
+  ) {
+    super();
 
-        this._initCommands();
-        this._registerComponents();
-        this._initMenus();
-    }
+    this._initCommands();
+    this._registerComponents();
+    this._initMenus();
+  }
 
-    /**
-     * register commands
-    */
-    private _initCommands(): void { }
+  /**
+   * register commands
+  */
+  private _initCommands(): void { }
 
-    /**
-     * register icon components
-    */
-    private _registerComponents(): void { }
+  /**
+   * register icon components
+  */
+  private _registerComponents(): void { }
 
-    /**
-     * register menu items
-    */
-    private _initMenus(): void { }
+  /**
+   * register menu items
+  */
+  private _initMenus(): void { }
 }
 ```
 
@@ -51,20 +57,20 @@ Register this `controller` to the plugin
 const SHEET_CUSTOM_MENU_PLUGIN = 'SHEET_CUSTOM_MENU_PLUGIN';
 
 export class UniverSheetsCustomMenuPlugin extends Plugin {
-    static override type = UniverInstanceType.UNIVER_SHEET;
-    static override pluginName = SHEET_CUSTOM_MENU_PLUGIN;
+  static override type = UniverInstanceType.UNIVER_SHEET;
+  static override pluginName = SHEET_CUSTOM_MENU_PLUGIN;
 
-    constructor(
-        @Inject(Injector) protected readonly _injector: Injector
-    ) {
-        super();
-    }
+  constructor(
+    @Inject(Injector) protected readonly _injector: Injector
+  ) {
+    super();
+  }
 
-    override onStarting(injector: Injector): void {
-        ([
-            [CustomMenuController],
-        ] as Dependency[]).forEach((d) => injector.add(d));
-    }
+  override onStarting(injector: Injector): void {
+    ([
+      [CustomMenuController],
+    ] as Dependency[]).forEach((d) => injector.add(d));
+  }
 }
 ```
 
@@ -74,12 +80,12 @@ Before registering a menu, you need to construct a `Command`, which will be exec
 ```ts
 // src/plugin/commands/operations/single-button.operation.ts
 export const SingleButtonOperation: ICommand = {
-    id: 'custom-menu.operation.single-button',
-    type: CommandType.OPERATION,
-    handler: async (accessor: IAccessor) => {
-        alert('Single button operation');
-        return true;
-    },
+  id: 'custom-menu.operation.single-button',
+  type: CommandType.OPERATION,
+  handler: async (accessor: IAccessor) => {
+    alert('Single button operation');
+    return true;
+  },
 };
 ```
 
@@ -87,11 +93,11 @@ Register this `Command` to `ICommandService`
 ```ts
 // src/plugin/controllers/custom-menu.controller.ts
 private _initCommands(): void {
-    [
-        SingleButtonOperation
-    ].forEach((c) => {
-        this.disposeWithMe(this._commandService.registerCommand(c));
-    });
+  [
+    SingleButtonOperation
+  ].forEach((c) => {
+    this.disposeWithMe(this._commandService.registerCommand(c));
+  });
 }
 ```
 
@@ -103,11 +109,11 @@ First construct an icon tsx component
 ```ts
 // src/plugin/components/button-icon/ButtonIcon.tsx
 export function ButtonIcon() {
-    return (
-        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
-            <path fill="currentColor" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m.16 14a6.981 6.981 0 0 0-5.147 2.256A7.966 7.966 0 0 0 12 20a7.97 7.97 0 0 0 5.167-1.892A6.979 6.979 0 0 0 12.16 16M12 4a8 8 0 0 0-6.384 12.821A8.975 8.975 0 0 1 12.16 14a8.972 8.972 0 0 1 6.362 2.634A8 8 0 0 0 12 4m0 1a4 4 0 1 1 0 8a4 4 0 0 1 0-8m0 2a2 2 0 1 0 0 4a2 2 0 0 0 0-4" />
-        </svg>
-    );
+  return (
+    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+      <path fill="currentColor" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m.16 14a6.981 6.981 0 0 0-5.147 2.256A7.966 7.966 0 0 0 12 20a7.97 7.97 0 0 0 5.167-1.892A6.979 6.979 0 0 0 12.16 16M12 4a8 8 0 0 0-6.384 12.821A8.975 8.975 0 0 1 12.16 14a8.972 8.972 0 0 1 6.362 2.634A8 8 0 0 0 12 4m0 1a4 4 0 1 1 0 8a4 4 0 0 1 0-8m0 2a2 2 0 1 0 0 4a2 2 0 0 0 0-4" />
+    </svg>
+  );
 };
 ```
 
@@ -115,7 +121,7 @@ Register this icon to `ComponentManager`
 ```ts
 // src/plugin/controllers/custom-menu.controller.ts
 private _registerComponents(): void {
-    this.disposeWithMe(this._componentManager.register("ButtonIcon", ButtonIcon));
+  this.disposeWithMe(this._componentManager.register("ButtonIcon", ButtonIcon));
 }
 ```
 
@@ -125,19 +131,19 @@ If your menu items need to be internationalized, you need to add internationaliz
 ```ts
 // src/plugin/locale/zh-CN.ts
 export default {
-    customMenu: {
-        button: '按钮',
-        singleButton: '单个按钮',
-    },
+  customMenu: {
+    button: '按钮',
+    singleButton: '单个按钮',
+  },
 };
 ```
 ```ts
 // src/plugin/locale/en-US.ts
 export default {
-    customMenu: {
-        button: 'Button',
-        singleButton: 'Single button',
-    },
+  customMenu: {
+    button: 'Button',
+    singleButton: 'Single button',
+  },
 };
 ```
 
@@ -145,20 +151,20 @@ Register this internationalized resource to `ILocaleService`
 ```ts
 // src/plugin/plugin.ts
 export class UniverSheetsCustomMenuPlugin extends Plugin {
-    static override type = UniverInstanceType.UNIVER_SHEET;
-    static override pluginName = SHEET_CUSTOM_MENU_PLUGIN;
+  static override type = UniverInstanceType.UNIVER_SHEET;
+  static override pluginName = SHEET_CUSTOM_MENU_PLUGIN;
 
-    constructor(
-        @Inject(Injector) protected readonly _injector: Injector,
-        @Inject(LocaleService) private readonly _localeService: LocaleService
-    ) {
-        super();
+  constructor(
+    @Inject(Injector) protected readonly _injector: Injector,
+    @Inject(LocaleService) private readonly _localeService: LocaleService
+  ) {
+    super();
 
-        this._localeService.load({
-            zhCN,
-            enUS
-        });
-    }
+    this._localeService.load({
+      zhCN,
+      enUS
+    });
+  }
 }
 ```
 
@@ -167,20 +173,20 @@ export class UniverSheetsCustomMenuPlugin extends Plugin {
 Organize the data needed for menu items, including the menu item's id, type, icon, title, positions, etc.
 ```ts
 export function CustomMenuItemSingleButtonFactory(): IMenuButtonItem<string> {
-    return {
-        // Bind the command id, clicking the button will trigger this command
-        id: SingleButtonOperation.id,
-        // The type of the menu item, in this case, it is a button
-        type: MenuItemType.BUTTON,
-        // The icon of the button, which needs to be registered in ComponentManager
-        icon: 'ButtonIcon',
-        // The tooltip of the button. Prioritize matching internationalization. If no match is found, the original string will be displayed
-        tooltip: 'customMenu.singleButton',
-        // The title of the button. Prioritize matching internationalization. If no match is found, the original string will be displayed
-        title: 'customMenu.button',
-        // The button position can be configured in the toolbar or context menu using MenuPosition. If it is a sheet, you can also use SheetMenuPosition to configure the row header, column header, or sheet bar context menu
-        positions: [MenuPosition.TOOLBAR_START, MenuPosition.CONTEXT_MENU],
-    };
+  return {
+    // Bind the command id, clicking the button will trigger this command
+    id: SingleButtonOperation.id,
+    // The type of the menu item, in this case, it is a button
+    type: MenuItemType.BUTTON,
+    // The icon of the button, which needs to be registered in ComponentManager
+    icon: 'ButtonIcon',
+    // The tooltip of the button. Prioritize matching internationalization. If no match is found, the original string will be displayed
+    tooltip: 'customMenu.singleButton',
+    // The title of the button. Prioritize matching internationalization. If no match is found, the original string will be displayed
+    title: 'customMenu.button',
+    // The button position can be configured in the toolbar or context menu using MenuPosition. If it is a sheet, you can also use SheetMenuPosition to configure the row header, column header, or sheet bar context menu
+    positions: [MenuPosition.TOOLBAR_START, MenuPosition.CONTEXT_MENU],
+  };
 }
 ```
 
@@ -188,13 +194,13 @@ Register this menu item with `IMenuService`
 ```ts
 // src/plugin/controllers/custom-menu.controller.ts
 private _initMenus(): void {
-    (
-        [
-            CustomMenuItemSingleButtonFactory
-        ] as IMenuItemFactory[]
-    ).forEach((factory) => {
-        this.disposeWithMe(this._menuService.addMenuItem(this._injector.invoke(factory)));
-    });
+  (
+    [
+      CustomMenuItemSingleButtonFactory
+    ] as IMenuItemFactory[]
+  ).forEach((factory) => {
+    this.disposeWithMe(this._menuService.addMenuItem(this._injector.invoke(factory)));
+  });
 }
 ```
 
@@ -210,26 +216,41 @@ In addition to adding a single button menu item, you can also add a dropdown men
 const CUSTOM_MENU_DROPDOWN_LIST_OPERATION_ID = 'custom-menu.operation.dropdown-list';
 
 export function CustomMenuItemDropdownListMainButtonFactory(): IMenuSelectorItem<string> {
-    return {
-        id: CUSTOM_MENU_DROPDOWN_LIST_OPERATION_ID,
-        type: MenuItemType.SUBITEMS,
-        icon: 'MainButtonIcon',
-        tooltip: 'customMenu.dropdownList',
-        title: 'customMenu.dropdown',
-        positions: [MenuPosition.TOOLBAR_START, MenuPosition.CONTEXT_MENU],
-    };
+  return {
+    id: CUSTOM_MENU_DROPDOWN_LIST_OPERATION_ID,
+    type: MenuItemType.SUBITEMS,
+    icon: 'MainButtonIcon',
+    tooltip: 'customMenu.dropdownList',
+    title: 'customMenu.dropdown',
+    positions: [MenuPosition.TOOLBAR_START, MenuPosition.CONTEXT_MENU],
+  };
 }
 
 export function CustomMenuItemDropdownListFirstItemFactory(): IMenuButtonItem<string> {
-    return {
-        id: DropdownListFirstItemOperation.id,
-        type: MenuItemType.BUTTON,
-        title: 'customMenu.itemOne',
-        icon: 'ItemIcon',
-        positions: [CUSTOM_MENU_DROPDOWN_LIST_OPERATION_ID],
-    };
+  return {
+    id: DropdownListFirstItemOperation.id,
+    type: MenuItemType.BUTTON,
+    title: 'customMenu.itemOne',
+    icon: 'ItemIcon',
+    positions: [CUSTOM_MENU_DROPDOWN_LIST_OPERATION_ID],
+  };
 }
-
 ```
 
 Please refer to [Custom Menu Playground](/playground?title=Custom+Menu) for more details.
+
+## Customizing Menu Items (Hiding Menu Items)
+
+Customizing or hiding menu items in Univer is a common requirement. We provide configuration options for all plugins that contain menu items, so you can easily achieve this requirement through configuration.
+
+For example, hiding the bold menu item:
+
+```typescript
+univer.registerPlugin(UniverSheetsUIPlugin, {
+  menu: {
+    'sheet.command.set-range-bold': {
+      hidden: true,
+    },
+  },
+});
+```
