docs: update docs

--- a/src/pages/guides/sheet/customization/ui.zh-CN.mdx
+++ b/src/pages/guides/sheet/customization/ui.zh-CN.mdx
@@ -243,8 +243,8 @@ export function CustomMenuItemDropdownListFirstItemFactory(): IMenuButtonItem<st
 univer.registerPlugin(UniverSheetsUIPlugin, {
   menu: {
     'sheet.command.set-range-bold': {
-      hidden: true
-    }
-  }
+      hidden: true,
+    },
+  },
 });
 ```
